tests/baselines/reference/superCallsInConstructor.errors.txt
tests/cases/compiler/superCallsInConstructor.ts(12,9): error TS1101: 'with' statements are not allowed in strict mode.
tests/cases/compiler/superCallsInConstructor.ts(12,14): error TS2410: All symbols within a 'with' block will be resolved to 'any'.


==== tests/cases/compiler/superCallsInConstructor.ts (2 errors) ====
    class C {
        foo() {}
        bar() {}
    }
    
    class Base {
        x: string;
    }
     
    class Derived extends Base {
        constructor() {
            with(new C()) {
            ~~~~
!!! error TS1101: 'with' statements are not allowed in strict mode.
                 ~~~~~~~
!!! error TS2410: All symbols within a 'with' block will be resolved to 'any'.
                foo();
                super();
                bar();
            }
    
            try {} catch(e) { super(); }
        }
    }